--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,6 +15,8 @@
 .header__image {
   border-radius: 20px;
   transition: ease-in-out 0.5s;
+  width: 100%;
+  max-width: 300px;
 }
 .header__image:hover {
   scale: 1.1;
