--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
 @import url("./blocks/page.css");
 @import url("./blocks/header.css");
 @import url("./blocks/videos.css");
+@import url("./blocks/comments.css");
