--- a/blocks/comments.css
+++ b/blocks/comments.css
@@ -16,13 +16,14 @@
   color: black;
   border-radius: 10px;
   transition: ease-in-out 0.5s;
+  box-shadow: 0px 0px 10px black;
 }
 .comments__card:hover {
   scale: 1.1;
   transition: ease-in-out 0.5s;
 }
 
-.comments__card_writer {
+.comments__card_type_title {
   font-weight: bold;
 }
 @media screen and (max-width: 990px) {
