another small change

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -5,7 +5,7 @@
     rgba(131, 58, 180, 1) 0%,
     rgba(26, 188, 156,1.0) 50%,
     rgba(52, 152, 219,1.0) 100%
-  );rgb(26, 188, 156)
+  );rgb(26, 188, 156);
   max-width: 880px;
   margin: 0 auto;
   align-items: center;
